# AmberWindow

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/window/: display.rs  mod.rs  window_manager.rs
src/window/widgets/: button.rs  checkbox.rs  image.rs  mod.rs  slider.rs  text.rs  widget.rs  widgetrow.rs  window_widget.rs
