[package]
name = "amberwindow"
version = "0.2.4"
edition = "2021"
description = "An easy to use ImmediateMode gui library for Rust."
license = "MIT" 
homepage = "https://github.com/creepersaur/AmberWindow"
repository = "https://github.com/creepersaur/AmberWindow"

[dependencies]
macroquad = "0.4.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3